welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var t= new Array[Color](getMondeHauteur());

	for (y<-0 to getMondeHauteur()-1) {
		T(y)=getCouleurSol();
		avance();
	}
	
}
